--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.maputo</groupId>
-	<artifactId>myapp</artifactId>
+	<artifactId>maputo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>maputo</name>
 	<description>My online forum</description>
